--- a/app/src/main/res/layout/item_show_list_layout.xml
+++ b/app/src/main/res/layout/item_show_list_layout.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ItemId#:"
-            android:textColor="@color/whiteTextColor"
+            android:textColor="@color/textPrimary"
             android:fontFamily="@font/poppins_black"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="1234567654"
             android:fontFamily="@font/poppins_medium"
-            android:textColor="@color/primaryColor"
+            android:textColor="@color/textSecondary"
             android:textSize="20dp"
             app:layout_constraintStart_toEndOf="@id/itemShowItemIDTag"
             app:layout_constraintTop_toTopOf="@id/itemShowItemIDTag"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:text="Name:"
             android:textSize="15dp"
-            android:textColor="@color/whiteTextColor"
+            android:textColor="@color/textPrimary"
             app:layout_constraintTop_toBottomOf="@id/itemShowItemIDTag"
             app:layout_constraintStart_toStartOf="@id/itemShowItemIDTag"
 
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="xyz"
-            android:textColor="@color/whiteTextColor"
+            android:textColor="@color/textSecondary"
             app:layout_constraintStart_toEndOf="@id/itemShowNameTag"
             app:layout_constraintTop_toTopOf="@id/itemShowNameTag"
             app:layout_constraintBottom_toBottomOf="@id/itemShowNameTag"
@@ -62,7 +62,6 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="10dp"
             android:padding="10dp"
-
             android:background="@drawable/delete_btn_bg"
             android:src="@drawable/delteicon"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -73,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quntity available:"
-            android:textColor="@color/whiteTextColor"
+            android:textColor="@color/textPrimary"
             android:fontFamily="@font/poppins_black"
             app:layout_constraintTop_toBottomOf="@id/itemShowNameTag"
             app:layout_constraintStart_toStartOf="@id/itemShowNameTag"
@@ -83,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
-            android:textColor="@color/whiteTextColor"
+            android:textColor="@color/textSecondary"
             android:fontFamily="@font/poppins_medium"
             app:layout_constraintStart_toEndOf="@id/itemShowQuntityTag"
             app:layout_constraintTop_toTopOf="@id/itemShowQuntityTag"
@@ -91,7 +90,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="10dp"
             android:layout_height="10dp"
-            android:backgroundTint="@color/green"
+            android:backgroundTint="@color/colorSuccess"
             app:cardCornerRadius="10dp"
             android:layout_marginLeft="10dp"
             app:layout_constraintStart_toEndOf="@id/itemShowQuntityTextField"
