--- a/app/src/main/res/layout/orders_list_layout.xml
+++ b/app/src/main/res/layout/orders_list_layout.xml
@@ -19,8 +19,8 @@
              android:id="@+id/orderIDTag"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:text="Oder#:"
-            android:textColor="@color/whiteTextColor"
+             android:text="Order#:"
+            android:textColor="@color/textPrimary"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="10dp"
              android:textSize="20dp"
@@ -34,7 +34,7 @@
              android:layout_marginLeft="5dp"
              android:text="12345678765"
              android:textSize="20dp"
-             android:textColor="@color/primaryColor"
+             android:textColor="@color/textPrimary"
              app:layout_constraintStart_toEndOf="@id/orderIDTag"
              app:layout_constraintTop_toTopOf="@id/orderIDTag"
              app:layout_constraintBottom_toBottomOf="@id/orderIDTag"
@@ -48,7 +48,7 @@
              android:textSize="25dp"
              android:layout_marginRight="20dp"
              android:textStyle="bold"
-             android:textColor="@color/whiteTextColor"
+             android:textColor="@color/textPrimary"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/billStatus"
              />
@@ -58,7 +58,7 @@
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Mon. July 3rd"
-             android:textColor="@color/whiteTextColor"
+             android:textColor="@color/textSecondary"
              app:layout_constraintStart_toStartOf="@id/orderIDTag"
              app:layout_constraintTop_toBottomOf="@id/orderIDTag"
              />
@@ -71,7 +71,7 @@
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:paddingTop="2dp"
-             android:textColor="@color/green"
+             android:textColor="@color/textPrimary"
              android:background="@drawable/btn_paid_bg"
              app:layout_constraintTop_toTopOf="@id/orderIDTag"
              app:layout_constraintStart_toStartOf="@id/priceTag"
