--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Activities.ViewItemActivity"
     tools:ignore="HardcodedText"
+    android:background="@color/colorBackground"
     >
 
     <ImageButton
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="Update Item"
-        android:textColor="@color/green"
+        android:textColor="@color/textPrimary"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@id/backBtn"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardCornerRadius="15dp"
+        android:backgroundTint="@color/colorOnSurface"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pageupdateTag">
@@ -57,7 +59,7 @@
                 android:layout_marginTop="10sp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Item Name"
-                android:textColor="@color/black"
+                android:textColor="@color/textDisabled"
                 android:textSize="20sp" />
 
             <TextView
@@ -81,7 +83,7 @@
                 android:layout_marginEnd="10sp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Item Price"
-                android:textColor="@color/black"
+                android:textColor="@color/textDisabled"
                 android:textSize="20sp" />
 
             <TextView
@@ -104,7 +106,7 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="item Quantity Availble"
-                android:textColor="@color/black"
+                android:textColor="@color/textDisabled"
                 android:textSize="20sp" />
 
             <TextView
@@ -127,7 +129,7 @@
                 android:layout_alignStart="@id/QunatityTag"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Discounted Rate"
-                android:textColor="@color/black"
+                android:textColor="@color/textDisabled"
                 android:textSize="20sp" />
 
             <TextView
@@ -160,6 +162,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         app:cardCornerRadius="10dp"
+        android:backgroundTint="@color/colorOnSurface"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardview_info"
 
@@ -178,7 +181,7 @@
                 android:layout_centerHorizontal="true"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Add stock"
-                android:textColor="@color/black"
+                android:textColor="@color/textDisabled"
                 android:textSize="30sp" />
 
             <androidx.cardview.widget.CardView
@@ -191,7 +194,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10sp"
                 android:layout_marginBottom="5sp"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/colorSurface"
                 app:cardCornerRadius="5dp">
 
                 <TextView
@@ -201,7 +204,7 @@
                     android:fontFamily="@font/poppins_medium"
                     android:gravity="center"
                     android:text="+10"
-                    android:textColor="@color/white"
+                    android:textColor="@color/textPrimary"
                     android:textSize="20sp" />
             </androidx.cardview.widget.CardView>
 
@@ -213,7 +216,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@id/tenPercentagecardView"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/colorSurface"
                 app:cardCornerRadius="5dp">
 
                 <TextView
@@ -223,7 +226,7 @@
                     android:fontFamily="@font/poppins_medium"
                     android:gravity="center"
                     android:text="+20"
-                    android:textColor="@color/white"
+                    android:textColor="@color/textPrimary"
                     android:textSize="20sp" />
             </androidx.cardview.widget.CardView>
 
@@ -235,7 +238,7 @@
                 android:layout_marginStart="20sp"
                 android:layout_marginBottom="5sp"
                 android:layout_toEndOf="@id/twentyPercentagecardView"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/colorSurface"
                 app:cardCornerRadius="5dp">
 
                 <TextView
@@ -245,7 +248,7 @@
                     android:fontFamily="@font/poppins_medium"
                     android:gravity="center"
                     android:text="+50"
-                    android:textColor="@color/white"
+                    android:textColor="@color/textPrimary"
                     android:textSize="20sp" />
             </androidx.cardview.widget.CardView>
 
@@ -257,7 +260,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@id/fiftyPercentagecardView"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/colorSurface"
                 app:cardCornerRadius="5dp">
 
                 <ImageButton
