--- a/app/src/main/res/layout/bottom_navbar.xml
+++ b/app/src/main/res/layout/bottom_navbar.xml
@@ -1,90 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/bottomNavBarColor"
-    >
+    android:background="@color/colorPrimaryVariant">
 
     <ImageButton
-            android:id="@+id/itemOne"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:gravity="center"
-            android:src="@drawable/homeicon"
-            app:layout_constraintEnd_toStartOf="@id/itemTwo"
-            android:backgroundTint="@android:color/transparent"
-            />
+        android:id="@+id/itemOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
+        android:gravity="center"
+        android:src="@drawable/homeicon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/itemTwo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
-                android:id="@+id/itemTwo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                app:layout_constraintStart_toEndOf="@id/itemOne"
-                app:layout_constraintTop_toTopOf="@id/itemOne"
-                app:layout_constraintBottom_toBottomOf="@id/itemOne"
-                app:layout_constraintEnd_toStartOf="@id/NewOderBtnCardView"
-                android:gravity="center"
-                android:src="@drawable/clienticon"
-                android:backgroundTint="@android:color/transparent"
-                />
+        android:id="@+id/itemTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:backgroundTint="@android:color/transparent"
+        android:gravity="center"
+        android:src="@drawable/itemsicon"
+        app:layout_constraintBottom_toBottomOf="@id/itemOne"
+        app:layout_constraintEnd_toStartOf="@id/NewOderBtnCardView"
+        app:layout_constraintStart_toEndOf="@id/itemOne"
+        app:layout_constraintTop_toTopOf="@id/itemOne" />
+
     <ImageButton
         android:id="@+id/itemthree"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintEnd_toStartOf="@id/itemFour"
-        app:layout_constraintTop_toTopOf="@id/itemFour"
-        app:layout_constraintBottom_toBottomOf="@id/itemFour"
-        app:layout_constraintStart_toEndOf="@id/NewOderBtnCardView"
-        android:src="@drawable/itemsicon"
         android:backgroundTint="@android:color/transparent"
-        />
+        android:gravity="center"
+        android:src="@drawable/clienticon"
+        app:layout_constraintBottom_toBottomOf="@id/itemFour"
+        app:layout_constraintEnd_toStartOf="@id/itemFour"
+
+        app:layout_constraintStart_toEndOf="@id/NewOderBtnCardView"
+        app:layout_constraintTop_toTopOf="@id/itemFour" />
+
     <ImageButton
         android:id="@+id/itemFour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
         android:gravity="center"
         android:src="@drawable/settingicon"
-        android:backgroundTint="@android:color/transparent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/itemthree"
+        app:layout_constraintTop_toTopOf="parent"
 
         />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/NewOderBtnCardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         app:cardCornerRadius="50dp"
-        app:cardElevation="100dp"
+        app:cardElevation="1000dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/NewOrderbtn"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_alignParentEnd="true"
-            android:backgroundTint="@color/secondryColor"
+            android:background="@drawable/circle_shape"
+            android:backgroundTint="@color/colorSurface"
             android:contentDescription="FloatingButton"
             android:src="@drawable/inovice_icon"
-            android:background="@drawable/circle_shape"
 
             />
     </androidx.cardview.widget.CardView>
-
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
