--- a/app/src/main/res/layout/fragment_items_fragment.xml
+++ b/app/src/main/res/layout/fragment_items_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.items_fragment"
-    android:background="@color/thirdColor"
+    android:background="@color/colorBackground"
     >
     <include
         android:id="@+id/topBaritemBar"
@@ -39,7 +39,7 @@
             android:text="@string/item_lists"
             android:textSize="30dp"
             android:layout_marginLeft="10dp"
-            android:textColor="@color/whiteTextColor"
+            android:textColor="@color/textPrimary"
             android:fontFamily="@font/poppins_black"
             android:layout_alignParentStart="true"
             />
@@ -74,7 +74,7 @@
         android:text="There is no Items"
         android:textSize="30dp"
         android:fontFamily="@font/poppins_black"
-        app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/topBaritemBar"
 
         />
 
