--- a/app/src/main/res/layout/top_bar_home_page.xml
+++ b/app/src/main/res/layout/top_bar_home_page.xml
@@ -12,7 +12,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:backgroundTint="@color/secondryColor"
+        android:backgroundTint="@color/colorSurface"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -39,12 +39,12 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:textAppearance="@color/white"
+                android:textAppearance="@color/textPrimary"
                 app:layout_constraintStart_toEndOf="@id/bellIcon_btn"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:background="@drawable/roundedcornershape"
-                android:backgroundTint="@color/thirdColor"
+                android:backgroundTint="@color/colorPrimaryVariant"
                 />
 
             <LinearLayout
@@ -65,7 +65,7 @@
                     android:textSize="52px"
                     android:textStyle="bold"
                     android:fontFamily="@font/poppins_extrabold"
-                    android:textColor="@color/white"
+                    android:textColor="@color/textPrimary"
                     />
                 <TextView
                     android:id="@+id/username"
@@ -75,7 +75,7 @@
                     android:textSize="28px"
                     android:layout_marginTop="-10dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:textColor="@color/white"
+                    android:textColor="@color/textSecondary"
                      />
 
             </LinearLayout>
